# streamlit-calendar

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: demo.py  requirements.txt
streamlit_calendar/: __init__.py
streamlit_calendar/frontend/: package-lock.json  package.json
streamlit_calendar/frontend/public/: bootstrap.min.css  index.html
streamlit_calendar/frontend/src/: Calendar.css  Calendar.tsx  index.tsx
streamlit_calendar/frontend/src/components/: Calendar.tsx
streamlit_calendar/frontend/src/styles/: Calendar.css
streamlit_calendar/frontend/src/types/: Calendar.type.ts
