[project]
name = "streamlit-calendar"
version = "1.4.0"
description = "📆 A Streamlit component to show callendar using FullCalendar (https://fullcalendar.io)"
authors = [{name = "Muhammad Luqman", email = "im.imperativa@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["streamlit", "streamlit-component"]

# Main dependencies
dependencies = [
    "streamlit>=1.12.0,<2.0.0"
]

[project.urls]
Repository = "https://github.com/im-perativa/streamlit-calendar"

[tool.poetry]
# This is required so the frontend code is properly included in the wheel.
include = ["streamlit_calendar/frontend/build/**/*"]

[tool.hatch.build]
# Ensure the same include pattern for building as in Poetry
include = ["streamlit_calendar/frontend/build/**/*"]

[tool.poetry.group.dev.dependencies]
watchdog="2.1.9"
black="^22.6.0"
isort="^5.10.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
